mod: 장바구니 목록 페이지를 AJAX 방식으로 변경
- 서버에서 검증된 정보를 가져와서 출력하도록 수정
- 장바구니 아이템 템플릿화

--- a/src/main/resources/templates/product.html
+++ b/src/main/resources/templates/product.html
@@ -77,7 +77,7 @@
                                     <dt class="blind">가격</dt>
                                     <dd class="desc_price">
                                         <del class="origin-price">{{price}}원</del>
-                                        <strong class="sale-price">5,400
+                                        <strong class="sale-price">{{salesPrice}}
                                             <span class="unit">원</span>
                                         </strong>
                                     </dd>
@@ -104,7 +104,7 @@
                                             </div>
                                             <p class="calculated_price">
                                                 <span class="price_label">총 상품금액</span>
-                                                <strong id="detail_total_price" class="price_number">5,400</strong>
+                                                <strong id="detail_total_price" class="price_number"></strong>
                                                 <span class="unit">원</span>
                                             </p>
                                             <button type="button" class="btn btn_mint btn_into_basket purchageable">담기</button>
