feat: Create computing delivery price logic with test
- Remove unnecessary field in cart
- Show delivery price and total price

--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -150,7 +150,7 @@
                                 </dd>
                                 <dt>배송비</dt>
                                 <dd>
-                                    <span pricedata="" id="shippingFee">2,500</span>원
+                                    <span pricedata="" id="shippingFee">{{ deliveryPrice }}</span>원
                                     <p class="msg">40,000원 이상 구매 시 배송비 무료</p>
                                 </dd>
                             </dl>
@@ -158,7 +158,7 @@
                             <dl class="total">
                                 <dt>총 주문금액</dt>
                                 <dd>
-                                    <span class="number" pricedata="" id="totalPrice">23,300</span>
+                                    <span class="number" pricedata="" id="totalPrice">{{ totalCartPrice }}</span>
                                     <span class="won">원</span>
                                     <p class="msg save-point">포인트
                                         <span id="mileage" pricedata="total_milage">208</span>p</p>
