refactor: Rename 'cart.js' to 'products.js'

--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -4,7 +4,7 @@
 <link rel="stylesheet" type="text/css" href="https://cdn.bmf.kr/web/css/swiper/3.2.7/swiper.min.css">
 <link rel="stylesheet" type="text/css" href="https://cdn.bmf.kr/static/css/app.v-bdf170c3.css">
 <script src="/js/main.js"></script>
-<script src="/js/cart.js"></script>
+<script src="/js/products.js"></script>
 {{/block}}
 
 {{#block "contents"}}
