--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -15,6 +15,9 @@
     {{/block}}
 </head>
 <body>
+<section>
+    <div class="error-box"></div>
+</section>
 <h1 class="blind">배민찬 - 메인 페이지</h1>
 
 <div id="scroll-btns">
