feat: Add front-end logic for removing a product in cart

--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -39,8 +39,7 @@
                             <tr>
                                 <th>
                                     <label class="custom_checkbox on">
-                                        <i class="chk_box"></i>
-                                        <input type="checkbox" id="check_all_cart_item" class="bf hidden_chk">
+                                        <input type="checkbox" id="check_all_cart_item" class="bf all_product_chk">
                                     </label>
                                 </th>
                                 <th colspan="2">상품</th>
